fixtures/negative/invalid_sa_position.sam
@SQ	SN:MT	LN:16569
bad-sa-position	0	MT	100	60	10M10S	*	0	0	AAAAAAAAAAAAAAAAAAAA	IIIIIIIIIIIIIIIIIIII	SA:Z:MT,0,+,10S10M,60,0;
